Added link to 'features on:'

--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -94,7 +94,7 @@
         <p><%= site.siteInfo3 %></p>
       </div>
       <div class="row">
-        <h3 class="details-subtitle">Features on: <%= site.tours %></h3>
+        <h3 class="details-subtitle">Features on: <a href="/tours"><%= site.tours %></a></h3>
         <h3 class="details-subtitle">(number) of metres away</h3>
         <h3 class="details-subtitle">Opening times</h3>
         <div class="opening-times">
