--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CDN -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link href= "/public/home-styles.css" rel="stylesheet" type="text/css" />
-    <link href= "/public/global-styles.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
+    <link href="/public/home-styles.css" rel="stylesheet" type="text/css" />
+    <link href="/public/global-styles.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend&display=swap"
+      rel="stylesheet"
+    />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
     <title>Norwich Digital Heritage Tours - Home</title>
@@ -29,7 +34,13 @@
     <nav class="navbar navbar-expand-lg nav-background">
       <div class="container-fluid">
         <a class="navbar-brand norwich-dht" href="/">
-          <img src="/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
+          <img
+            src="/images/logo.png"
+            alt="Logo"
+            width="25"
+            height="30"
+            class="d-inline-block align-text-top"
+          />
           Norwich Digital Heritage Tours
         </a>
         <button
@@ -45,7 +56,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/tours">Tours</a>
             <a class="nav-link" href="/gallery">Gallery</a>
             <a class="nav-link" href="/map">Map</a>
@@ -57,16 +68,24 @@
     <div class="container">
       <div class="row title-text">
         <h2>Welcome to Norwich Digital Heritage Tours</h2>
-        <h3 class="home-subtitle">Select an option by clicking on 'tours', 'map' or 'gallery'.</h3>
+        <h3 class="home-subtitle">
+          Select an option by clicking on 'tours', 'map' or 'gallery'.
+        </h3>
       </div>
       <div class="row home-main-content">
         <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
           <a href="/tours">
             <div class="card h-100">
-              <img class="card-img-top" src="../images/tour-friends.jpg" alt="Two women looking at smartphone">
+              <img
+                class="card-img-top"
+                src="../images/tour-friends.jpg"
+                alt="Two women looking at smartphone"
+              />
               <div class="card-body">
                 <h5 class="card-title">Tours</h5>
-                <p class="card-text">Take a tour of Norwich's churches or public buildings.</p>
+                <p class="card-text">
+                  Take a tour of Norwich's churches or public buildings.
+                </p>
               </div>
             </div>
           </a>
@@ -74,10 +93,17 @@
         <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
           <a href="/map">
             <div class="card h-100">
-              <img class="card-img-top" src="../images/norwich-map.png" alt="Map of Norwich">
+              <img
+                class="card-img-top"
+                src="../images/norwich-map.png"
+                alt="Map of Norwich"
+              />
               <div class="card-body">
                 <h5 class="card-title">Map</h5>
-                <p class="card-text">Locate heritage sites on our interactive map and learn more about them.</p>
+                <p class="card-text">
+                  Locate heritage sites on our interactive map and learn more
+                  about them.
+                </p>
               </div>
             </div>
           </a>
@@ -85,10 +111,16 @@
         <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
           <a href="/gallery">
             <div class="card h-100">
-              <img class="card-img-top" src="../images/norwich-castle.jpg" alt="Norwich castle">
+              <img
+                class="card-img-top"
+                src="../images/norwich-castle.jpg"
+                alt="Norwich castle"
+              />
               <div class="card-body">
                 <h5 class="card-title">Gallery</h5>
-                <p class="card-text">View photos of each heritage site featured across all tours.</p>
+                <p class="card-text">
+                  View photos of each heritage site featured across all tours.
+                </p>
               </div>
             </div>
           </a>
