--- a/views/more.ejs
+++ b/views/more.ejs
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CDN -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+    crossorigin="anonymous"
     />
     <link href= "/public/map-styles.css" rel="stylesheet" type="text/css" />
     <link href= "/public/global-styles.css" rel="stylesheet" type="text/css" />
+    <link href="/public/more-styles.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,10 +24,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANPJXyZnJG659k1QzEUfK3quG8aKjKrH8&callback=initMap">
-    </script>
-    <script src="../public/public-buildings-map-frontend.js"></script>
+    <script src="../public/toggle.js" defer></script>
     <title>Norwich Digital Heritage Tours - Site Map</title>
 </head>
 <body>
@@ -58,29 +56,30 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
               <a class="nav-link" href="/tours">Tours</a>
               <a class="nav-link" href="/gallery">Gallery</a>
               <a class="nav-link" href="/map">Map</a>
-              <a class="nav-link" href="/more">More</a>
+              <a class="nav-link active" href="/more">More</a>
             </div>
           </div>
         </div>
       </nav>
       <div class="container">
         <div class="row title-text">
-            <h2>Inner Norwich Public Buildings Tour</h2>
+            <h2>More options</h2>
         </div>
         <div class="row subtitle-text">
-            <h5>Click on a point to learn more about each public building. For the best experience, we recommend visiting each site in the order specified (1-7). The green point marks your current location and will update as you move.</h5>
-            <h5>When you have completed the tour, click the 'complete tour' button at the bottom of the page.</h5>
+            <h3>Edit options below</h3>
         </div>
-        <div class="col-12 mt-5 map-container">
-            <div id="map"></div>
-        </div>
-        <div class="col-12 mb-5 d-flex justify-content-center">
-          <a class="btn btn-primary rating-btn" href="/tours/public-buildings/rating" role="button">Complete Tour</a>
-        </div>
+        <ul>
+            <li>Dark mode</li>
+            <li>
+                <div class="toggle-btn" id="dark_toggle">
+                    <div class="inner-circle"></div>
+                </div>
+            </li>
+        </ul>
       </div>
 </body>
 </html>
