Dark mode functionality

--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -25,10 +25,11 @@
       crossorigin="anonymous"
     ></script>
     <script src="/public/gallery-modal.js"></script>
+    <script type="module" src="../public/theme.js"></script>
     <title>Norwich Digital Heritage Tours - Site Gallery</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg nav-background">
+    <nav class="navbar navbar-expand-lg nav-background" id="main-nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <span class="material-icons back-arrow"> arrow_back_ios </span>
