--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,10 +28,11 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="../public/theme.js"></script>
     <title>Norwich Digital Heritage Tours - Home</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg nav-background">
+    <nav class="navbar navbar-expand-lg nav-background" id="main-nav">
       <div class="container-fluid">
         <a class="navbar-brand norwich-dht" href="/">
           <img
