--- a/views/map.ejs
+++ b/views/map.ejs
@@ -27,10 +27,11 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANPJXyZnJG659k1QzEUfK3quG8aKjKrH8&callback=initMap">
     </script>
     <script src="../public/main-map-frontend.js"></script>
+    <script type="module" src="../public/theme.js"></script>
     <title>Norwich Digital Heritage Tours - Site Map</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg nav-background">
+    <nav class="navbar navbar-expand-lg nav-background" id="main-nav">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
             <span class="material-icons back-arrow"> arrow_back_ios </span>
