--- a/views/more.ejs
+++ b/views/more.ejs
@@ -24,11 +24,12 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script src="../public/toggle.js" defer></script>
+    <script type="module" src="../public/toggle.js"></script>
+    <script type="module" src="../public/theme.js"></script>
     <title>Norwich Digital Heritage Tours - Site Map</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg nav-background">
+    <nav class="navbar navbar-expand-lg nav-background" id="main-nav">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
             <span class="material-icons back-arrow"> arrow_back_ios </span>
