--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -24,11 +24,12 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="../public/theme.js"></script>
     <% sites.forEach(site => { %>
     <title>Norwich Digital Heritage Tours - <%= site.siteName %> </title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg nav-background">
+    <nav class="navbar navbar-expand-lg nav-background" id="main-nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="/gallery">
           <span class="material-icons"> arrow_back_ios </span>
