--- a/views/more.ejs
+++ b/views/more.ejs
@@ -68,10 +68,7 @@
       </nav>
       <div class="container">
         <div class="row title-text">
-            <h2>More options</h2>
-        </div>
-        <div class="row subtitle-text">
-            <h3>Edit options below</h3>
+            <h2>Accessibility options</h2>
         </div>
         <ul>
             <li>Dark mode</li>
