--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -10,8 +10,8 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link href= "/public/site-screen-styles.css" rel="stylesheet" type="text/css" />
     <link href= "/public/global-styles.css" rel="stylesheet" type="text/css" />
+    <link href= "/public/site-screen-styles.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -95,7 +95,7 @@
         <p><%= site.siteInfo3 %></p>
       </div>
       <div class="row">
-        <h3 class="details-subtitle">Features on: <a href="/tours"><%= site.tours %></a></h3>
+        <h3 class="details-subtitle">Features on: <a class="site-tour-link" href="/tours"><%= site.tours %></a></h3>
         <h3 class="details-subtitle">(number) of metres away</h3>
         <h3 class="details-subtitle">Opening times</h3>
         <div class="opening-times">
