--- a/public/site-screen-styles.css
+++ b/public/site-screen-styles.css
@@ -26,6 +26,10 @@
     margin-top: 30px;
     margin-bottom: 30px;
 }
+.site-tour-link, .site-tour-link:hover, .site-tour-link:visited {
+    text-decoration: underline;
+    color: #75CFF6;
+}
 .site-information {
     display: flex;
     justify-content: center;
