--- a/views/tour-rating.ejs
+++ b/views/tour-rating.ejs
@@ -28,7 +28,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="../public/theme.js"></script>
+    <script type="module" src="/public/theme.js"></script>
     <title>Norwich Digital Heritage Tours - Rate the Tour</title>
   </head>
   <body>
@@ -78,7 +78,7 @@
     <div class="row form-container">
       <div class="rating-form-container">
         <form class="rating-form" action="/tours" method="post">
-          <label class="form-label"
+          <label class="form-label" for="church"
             >Which tour would you like to leave a rating for?</label
           >
           <div class="form-check">
@@ -90,7 +90,7 @@
               value="Churches"
               checked
             />
-            <label class="form-check-label" for="churchRadio">Churches</label>
+            <label class="form-check-label" for="church">Churches</label>
           </div>
           <div class="form-check">
             <input
@@ -104,7 +104,7 @@
               >Public Buildings</label
             >
           </div>
-          <label class="form-label"
+          <label class="form-label" for="enjoyment_positive"
             >Did you enjoy the tour you participated with today?</label
           >
           <div class="form-check">
@@ -144,7 +144,7 @@
               >I did not enjoy it</label
             >
           </div>
-          <label class="form-label"
+          <label class="form-label" for="interactive_positive"
             >Do you think that the interactive features of this website (e.g.
             the map, audio recordings) made it easier to engage with the
             information?</label
@@ -186,7 +186,7 @@
               It didn't make it easier
             </label>
           </div>
-          <label class="form-label"
+          <label class="form-label" for="direction_positive"
             >Do you think the map provided sufficient directions to each
             heritage site?</label
           >
