--- a/public/more-styles.css
+++ b/public/more-styles.css
@@ -13,6 +13,9 @@
     margin-left: 10px;
     transition: all .3s ease-in-out;
 }
+.toggle-btn, .inner-circle:hover {
+    cursor: pointer;
+}
 .toggle-btn > .inner-circle {
     width: 20px;
     height: 20px;
