Hard-coded metres away

--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -96,7 +96,7 @@
       </div>
       <div class="row">
         <h3 class="details-subtitle">Features on: <a class="site-tour-link" href="/tours"><%= site.tours %></a></h3>
-        <h3 class="details-subtitle">(number) of metres away</h3>
+        <h3 class="details-subtitle">3540 metres away</h3>
         <h3 class="details-subtitle">Opening times</h3>
         <div class="opening-times">
           <div class="days">
